Support BSSID message